--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    image: mysql:8.0
+    image: ${MYSQL_IMAGE:-mysql:8.0}
     environment:
       MYSQL_ROOT_PASSWORD: 12345678
       MYSQL_DATABASE: second_trade
@@ -23,7 +23,8 @@ services:
     build:
       context: ./backend
       args:
-        JAR_FILE: target/backend-0.0.1-SNAPSHOT.jar
+        BUILD_IMAGE: ${BACKEND_BUILD_IMAGE:-maven:3.8.6-openjdk-8}
+        RUNTIME_IMAGE: ${BACKEND_RUNTIME_IMAGE:-eclipse-temurin:8-jre}
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
@@ -44,6 +45,8 @@ services:
     build:
       context: ./frontend
       args:
+        NODE_BUILD_IMAGE: ${FRONTEND_BUILD_IMAGE:-node:20-alpine}
+        NODE_RUNTIME_IMAGE: ${FRONTEND_RUNTIME_IMAGE:-node:20-alpine}
         VITE_API_BASE_URL: "http://localhost:8000"
     depends_on:
       - backend
